--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.9"
 pytest = "^6.2.5"
 pytest-mock = "^3.5.1"
 pytest-cov = "^3.0.0"
+fastapi = "^0.75.0"
+uvicorn = "^0.17.6"
+ulid-py = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
