--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest-cov = "^3.0.0"
 fastapi = "^0.75.0"
 uvicorn = "^0.17.6"
 ulid-py = "^1.1.0"
+boto3 = "^1.21.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -36,6 +37,8 @@ pre-commit = "^2.17.0"
 mypy = "^0.931"
 types-setuptools = "^57.4.8"
 types-toml = "^0.10.3"
+boto3-stubs = "^1.21.4"
+requests = "^2.27.1"
 
 [tool.isort]
 profile = "black"
