--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ fastapi = "^0.75.0"
 uvicorn = "^0.17.6"
 ulid-py = "^1.1.0"
 boto3 = "^1.21.4"
+pytest-asyncio = "^0.18.2"
+fastapi-utils = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -50,6 +52,7 @@ line-length = 120
 
 [tool.pytest.ini_options]
 minversion = "6.0"
+asyncio_mode = "auto"
 testpaths = [
     "tests",
 ]
