--- a/mypy.ini
+++ b/mypy.ini
@@ -1,13 +1,25 @@
 [mypy]
+plugins = pydantic.mypy
+follow_imports = silent
 warn_return_any=False
 warn_unused_configs=True
-no_implicit_optional=True
 warn_redundant_casts=True
 warn_unused_ignores=True
 show_column_numbers = True
 show_error_codes = True
 show_error_context = True
+no_implicit_optional=True
+no_implicit_reexport=True
 mypy_path=.
+
+# for strict mypy: (this is the tricky one :-))
+# disallow_untyped_defs = True
+
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
 
 [mypy-uvicorn]
 ignore_missing_imports = True
