added opentelemetry instrumentation

--- a/mypy.ini
+++ b/mypy.ini
@@ -10,6 +10,7 @@ show_error_codes = True
 show_error_context = True
 no_implicit_optional=True
 no_implicit_reexport=True
+namespace_packages = true
 mypy_path=.
 
 # for strict mypy: (this is the tricky one :-))
