--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ ulid-py = "^1.1.0"
 boto3 = "^1.21.4"
 pytest-asyncio = "^0.18.2"
 fastapi-utils = "^0.2.1"
+opentelemetry-instrumentation-fastapi = "^0.29b0"
+opentelemetry-sdk-extension-aws = "^2.0.1"
+opentelemetry-exporter-otlp = "^1.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
