refactor ledger to use redis as storage backend

--- a/mypy.ini
+++ b/mypy.ini
@@ -24,3 +24,13 @@ warn_untyped_fields = True
 
 [mypy-uvicorn]
 ignore_missing_imports = True
+
+[mypy-redis_om]
+ignore_missing_imports = True
+
+[mypy-redis_om.model.model]
+ignore_missing_imports = True
+
+
+[mypy-retrying]
+ignore_missing_imports = True
