--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,12 @@ pytest-mock = "^3.5.1"
 pytest-cov = "^3.0.0"
 fastapi = "^0.75.0"
 uvicorn = "^0.17.6"
-ulid-py = "^1.1.0"
-boto3 = "^1.21.4"
 pytest-asyncio = "^0.18.2"
 fastapi-utils = "^0.2.1"
-opentelemetry-instrumentation-fastapi = "^0.29b0"
-opentelemetry-sdk-extension-aws = "^2.0.1"
-opentelemetry-exporter-otlp = "^1.10.0"
+mypy = "0.991"
+redis-om = "^0.1.2"
+python-ulid = "^1.1.0"
+retrying = "^1.3.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -39,11 +38,12 @@ flake8-isort = "^4.1.1"
 flake8-variables-names = "^0.0.4"
 isort = "^5.10.1"
 pre-commit = "^2.17.0"
-mypy = "^0.931"
 types-setuptools = "^57.4.8"
 types-toml = "^0.10.3"
-boto3-stubs = "^1.21.4"
-requests = "^2.27.1"
+types-redis = "^4.4.0"
+requests = "^2.28.2"
+types-requests = "^2.28.11"
+fakeredis = "^2.4.0"
 
 [tool.isort]
 profile = "black"
