--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ mypy = "0.991"
 redis-om = "^0.1.2"
 python-ulid = "^1.1.0"
 retrying = "^1.3.4"
+newrelic = "^8.5.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
