--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,41 +1,74 @@
 anyio==3.6.2; python_version >= "3.6" and python_full_version >= "3.6.2"
 asgiref==3.6.0; python_version >= "3.7"
-async-timeout==4.0.2; python_version >= "3.7" and python_version < "4.0"
+async-timeout==4.0.2; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.8.1"
 atomicwrites==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==22.2.0; python_version >= "3.7"
+black==22.12.0; python_version >= "3.7"
+certifi==2022.12.7; python_version >= "3.7" and python_version < "4"
+cfgv==3.3.1; python_full_version >= "3.6.1" and python_version >= "3.7"
+charset-normalizer==3.0.1; python_version >= "3.7" and python_version < "4"
 click==8.1.3; python_version >= "3.7" and python_version < "4.0"
 colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.7.0" and platform_system == "Windows" and python_version < "4.0"
 coverage==7.0.5; python_version >= "3.7"
+distlib==0.3.6; python_version >= "3.7"
+fakeredis==2.4.0; python_full_version >= "3.8.1" and python_version < "4.0"
 fastapi-utils==0.2.1; python_version >= "3.6" and python_version < "4.0"
 fastapi==0.75.2; python_full_version >= "3.6.1"
+filelock==3.9.0; python_version >= "3.7"
+flake8-black==0.2.5
+flake8-builtins==1.5.3
+flake8-comprehensions==3.10.1; python_version >= "3.7"
+flake8-debugger==4.1.2; python_version >= "3.7"
+flake8-fixme==1.1.1
+flake8-isort==4.2.0
+flake8-variables-names==0.0.4
+flake8==4.0.1; python_version >= "3.6"
 greenlet==2.0.1; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
 h11==0.14.0; python_version >= "3.7"
 hiredis==2.1.1; python_version >= "3.7" and python_version < "4.0"
-idna==3.4; python_version >= "3.6" and python_full_version >= "3.6.2"
+identify==2.5.13; python_version >= "3.7"
+idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 iniconfig==2.0.0; python_version >= "3.7"
+isort==5.11.4; python_full_version >= "3.7.0"
+mccabe==0.6.1; python_version >= "3.7"
 more-itertools==8.14.0; python_version >= "3.7" and python_version < "4.0"
 mypy-extensions==0.4.3; python_version >= "3.7"
 mypy==0.991; python_version >= "3.7"
 newrelic==8.5.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.7.0")
+nodeenv==1.7.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.7.0" and python_version >= "3.7"
 packaging==23.0; python_version >= "3.7"
+pathspec==0.10.3; python_version >= "3.7"
+platformdirs==2.6.2; python_version >= "3.7"
 pluggy==1.0.0; python_version >= "3.7"
 pptree==3.1; python_version >= "3.7" and python_version < "4.0"
+pre-commit==2.21.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+pycodestyle==2.8.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pydantic==1.10.4; python_version >= "3.7" and python_full_version >= "3.6.1" and python_version < "4.0"
+pyflakes==2.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.10.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
 python-ulid==1.1.0; python_version >= "3.7"
+pyyaml==6.0; python_version >= "3.7"
 redis-om==0.1.2; python_version >= "3.7" and python_version < "4.0"
-redis==4.4.2; python_version >= "3.7" and python_version < "4.0"
+redis==4.4.2; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.8.1"
+requests==2.28.2; python_version >= "3.7" and python_version < "4"
 retrying==1.3.4
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 sniffio==1.3.0; python_version >= "3.7" and python_full_version >= "3.6.2"
+sortedcontainers==2.4.0; python_full_version >= "3.8.1" and python_version < "4.0"
 sqlalchemy==1.4.46; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 starlette==0.17.1; python_version >= "3.6" and python_full_version >= "3.6.1" and python_version < "4.0"
 toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 tomli==2.0.1; python_version < "3.11" and python_version >= "3.7" and python_full_version <= "3.11.0a6"
 types-redis==4.4.0.0
-typing-extensions==4.4.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.6.1"
+types-requests==2.28.11.7
+types-setuptools==57.4.18
+types-toml==0.10.8.1
+types-urllib3==1.26.25.4
+typing-extensions==4.4.0; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.1"
+urllib3==1.26.14; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
 uvicorn==0.17.6; python_version >= "3.7"
+virtualenv==20.17.1; python_version >= "3.7"
