--- a/k8s/envs/pie/kustomization.yaml
+++ b/k8s/envs/pie/kustomization.yaml
@@ -3,6 +3,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 
 resources:
   - ../../base
-  - ingress.yaml
 
 namespace: default
+
+
+generatorOptions:
+  disableNameSuffixHash: true
+
+configMapGenerator:
+  - name: newrelic-ini
+    files:
+      - newrelic.ini
