--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ redis-om = "^0.1.2"
 python-ulid = "^1.1.0"
 retrying = "^1.3.4"
 newrelic = "^8.5.0"
+python-multipart = "^0.0.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
