--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.10.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
+python-multipart==0.0.5
 python-ulid==1.1.0; python_version >= "3.7"
 redis-om==0.1.2; python_version >= "3.7" and python_version < "4.0"
 redis==4.4.2; python_version >= "3.7" and python_version < "4.0"
