--- a/k8s/envs/pie/kustomization.yaml
+++ b/k8s/envs/pie/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
   - ../../base
 
-namespace: default
+namespace: vinobank
 
 
 generatorOptions:
