--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: core-banking-sim
         image: ghcr.io/vino9org/core-banking-sim:0.1.1
+        imagePullPolicy: Always
         ports:
         - containerPort: 8000
         env:
