--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.6.0; python_version >= "3.7"
 async-timeout==4.0.2; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==22.2.0; python_version >= "3.7"
+certifi==2022.12.7; python_version >= "3.7" and python_version < "4"
+charset-normalizer==3.0.1; python_version >= "3.7" and python_version < "4"
 click==8.1.3; python_version >= "3.7" and python_version < "4.0"
 colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.7.0" and platform_system == "Windows" and python_version < "4.0"
 coverage==7.0.5; python_version >= "3.7"
@@ -11,7 +13,7 @@ fastapi==0.75.2; python_full_version >= "3.6.1"
 greenlet==2.0.1; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
 h11==0.14.0; python_version >= "3.7"
 hiredis==2.1.1; python_version >= "3.7" and python_version < "4.0"
-idna==3.4; python_version >= "3.6" and python_full_version >= "3.6.2"
+idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 iniconfig==2.0.0; python_version >= "3.7"
 more-itertools==8.14.0; python_version >= "3.7" and python_version < "4.0"
 mypy-extensions==0.4.3; python_version >= "3.7"
@@ -30,6 +32,7 @@ python-multipart==0.0.5
 python-ulid==1.1.0; python_version >= "3.7"
 redis-om==0.1.2; python_version >= "3.7" and python_version < "4.0"
 redis==4.4.2; python_version >= "3.7" and python_version < "4.0"
+requests==2.28.2; python_version >= "3.7" and python_version < "4"
 retrying==1.3.4
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 sniffio==1.3.0; python_version >= "3.7" and python_full_version >= "3.6.2"
@@ -39,4 +42,5 @@ toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or pytho
 tomli==2.0.1; python_version < "3.11" and python_version >= "3.7" and python_full_version <= "3.11.0a6"
 types-redis==4.4.0.0
 typing-extensions==4.4.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.6.1"
+urllib3==1.26.14; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
 uvicorn==0.17.6; python_version >= "3.7"
