--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ retrying = "^1.3.4"
 newrelic = "^8.5.0"
 python-multipart = "^0.0.5"
 requests = "^2.28.2"
+boto3 = "^1.26.50"
+nats-py = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -46,6 +48,7 @@ types-toml = "^0.10.3"
 types-redis = "^4.4.0"
 types-requests = "^2.28.11"
 fakeredis = "^2.4.0"
+types-boto3 = "^1.0.2"
 
 [tool.isort]
 profile = "black"
