--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,10 @@ async-timeout==4.0.2; python_version >= "3.7" and python_version < "4.0" and pyt
 atomicwrites==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==22.2.0; python_version >= "3.7"
 black==22.12.0; python_version >= "3.7"
+boto3-stubs==1.26.50; python_version >= "3.7"
+boto3==1.26.50; python_version >= "3.7"
+botocore-stubs==1.29.50; python_version >= "3.7" and python_version < "4.0"
+botocore==1.29.50; python_version >= "3.7"
 certifi==2022.12.7; python_version >= "3.7" and python_version < "4"
 cfgv==3.3.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 charset-normalizer==3.0.1; python_version >= "3.7" and python_version < "4"
@@ -30,6 +34,7 @@ identify==2.5.13; python_version >= "3.7"
 idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 iniconfig==2.0.0; python_version >= "3.7"
 isort==5.11.4; python_full_version >= "3.7.0"
+jmespath==1.0.1; python_version >= "3.7"
 mccabe==0.6.1; python_version >= "3.7"
 more-itertools==8.14.0; python_version >= "3.7" and python_version < "4.0"
 mypy-extensions==0.4.3; python_version >= "3.7"
@@ -50,6 +55,7 @@ pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.10.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
+python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 python-multipart==0.0.5
 python-ulid==1.1.0; python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.7"
@@ -57,15 +63,19 @@ redis-om==0.1.2; python_version >= "3.7" and python_version < "4.0"
 redis==4.4.2; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.8.1"
 requests==2.28.2; python_version >= "3.7" and python_version < "4"
 retrying==1.3.4
-six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
+s3transfer==0.6.0; python_version >= "3.7"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 sniffio==1.3.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 sortedcontainers==2.4.0; python_full_version >= "3.8.1" and python_version < "4.0"
 sqlalchemy==1.4.46; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 starlette==0.17.1; python_version >= "3.6" and python_full_version >= "3.6.1" and python_version < "4.0"
 toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 tomli==2.0.1; python_version < "3.11" and python_version >= "3.7" and python_full_version <= "3.11.0a6"
+types-awscrt==0.16.4; python_version >= "3.7" and python_version < "4.0"
+types-boto3==1.0.2
 types-redis==4.4.0.0
 types-requests==2.28.11.7
+types-s3transfer==0.6.0.post5; python_version >= "3.7" and python_version < "4.0"
 types-setuptools==57.4.18
 types-toml==0.10.8.1
 types-urllib3==1.26.25.4
