--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.6.0; python_version >= "3.7"
 async-timeout==4.0.2; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==22.2.0; python_version >= "3.7"
+boto3==1.26.50; python_version >= "3.7"
+botocore==1.29.50; python_version >= "3.7"
 certifi==2022.12.7; python_version >= "3.7" and python_version < "4"
 charset-normalizer==3.0.1; python_version >= "3.7" and python_version < "4"
 click==8.1.3; python_version >= "3.7" and python_version < "4.0"
@@ -15,9 +17,11 @@ h11==0.14.0; python_version >= "3.7"
 hiredis==2.1.1; python_version >= "3.7" and python_version < "4.0"
 idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 iniconfig==2.0.0; python_version >= "3.7"
+jmespath==1.0.1; python_version >= "3.7"
 more-itertools==8.14.0; python_version >= "3.7" and python_version < "4.0"
 mypy-extensions==0.4.3; python_version >= "3.7"
 mypy==0.991; python_version >= "3.7"
+nats-py==2.2.0; python_version >= "3.7"
 newrelic==8.5.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.7.0")
 packaging==23.0; python_version >= "3.7"
 pluggy==1.0.0; python_version >= "3.7"
@@ -28,13 +32,15 @@ pytest-asyncio==0.18.3; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.10.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
+python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 python-multipart==0.0.5
 python-ulid==1.1.0; python_version >= "3.7"
 redis-om==0.1.2; python_version >= "3.7" and python_version < "4.0"
 redis==4.4.2; python_version >= "3.7" and python_version < "4.0"
 requests==2.28.2; python_version >= "3.7" and python_version < "4"
 retrying==1.3.4
-six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
+s3transfer==0.6.0; python_version >= "3.7"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 sniffio==1.3.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 sqlalchemy==1.4.46; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 starlette==0.17.1; python_version >= "3.6" and python_full_version >= "3.6.1" and python_version < "4.0"
