--- a/k8s/envs/pie/kustomization.yaml
+++ b/k8s/envs/pie/kustomization.yaml
@@ -14,3 +14,8 @@ configMapGenerator:
   - name: newrelic-ini
     files:
       - newrelic.ini
+
+secretGenerator:
+  - name: aws-credential
+    envs:
+      - aws.env
