--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -39,6 +39,7 @@ mccabe==0.6.1; python_version >= "3.7"
 more-itertools==8.14.0; python_version >= "3.7" and python_version < "4.0"
 mypy-extensions==0.4.3; python_version >= "3.7"
 mypy==0.991; python_version >= "3.7"
+nats-py==2.2.0; python_version >= "3.7"
 newrelic==8.5.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.7.0")
 nodeenv==1.7.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.7.0" and python_version >= "3.7"
 packaging==23.0; python_version >= "3.7"
