--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -2,6 +2,8 @@
 
 on:
   push:
+    branches:
+      - develop
     tags:
       - "0.*"
 
@@ -41,6 +43,15 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
+      - name: set image metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+            images: ghcr.io/${{ github.repository }}
+            tags: |
+              type=ref,event=tag
+              type=match,pattern=develop,value=latest
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -56,14 +67,14 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           platforms: "linux/amd64,linux/arm64"
-          push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
 
       - name: Delete old images
         uses: actions/delete-package-versions@v4
         with:
           owner: vino9org
-          package-names: ${{ github.ref_name }}
+          package-name: ${{ github.repository }}
           package-type: container
           min-versions-to-keep: 3
           ignore-versions: latest
