--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: core-banking-sim
-        image: ghcr.io/vino9org/core-banking-sim:0.1.4
+        image: ghcr.io/vino9org/core-banking-sim:latest
         ports:
         - containerPort: 8000
         env:
