--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -50,7 +50,7 @@ jobs:
             images: ghcr.io/${{ github.repository }}
             tags: |
               type=ref,event=tag
-              type=match,pattern=develop,value=latest
+              type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
