--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -74,8 +74,10 @@ jobs:
       - name: Delete old images
         uses: actions/delete-package-versions@v4
         with:
-          owner: vino9org
-          package-name: core-banking-sim
+          owner: ${{ github.repository_owner }}
+          package-name: ${{ github.event.repository.name }}
+          # owner: vino9org
+          # package-name: core-banking-sim
           package-type: container
           min-versions-to-keep: 3
           ignore-versions: latest
