added ingress. disable publishing events

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - name: REDIS_OM_URL
           value: redis://:pass147@redis:6379/0
         - name: EVENT_SINK_TYPE
-          value: AWS_EVENTBRIDGE
+          value: NONE
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
             secretKeyRef:
