fix mypy issues

--- a/mypy.ini
+++ b/mypy.ini
@@ -28,9 +28,12 @@ ignore_missing_imports = True
 [mypy-redis_om]
 ignore_missing_imports = True
 
-[mypy-redis_om.model.model]
+[mypy-redis_om.model.*]
 ignore_missing_imports = True
 
 
 [mypy-retrying]
+ignore_missing_imports = True
+
+[mypy-fastapi_cprofile.profiler]
 ignore_missing_imports = True
