--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,6 +16,7 @@ colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and s
 coverage==7.0.5; python_version >= "3.7"
 distlib==0.3.6; python_version >= "3.7"
 fakeredis==2.4.0; python_full_version >= "3.8.1" and python_version < "4.0"
+fastapi-cprofile==0.0.2
 fastapi-utils==0.2.1; python_version >= "3.6" and python_version < "4.0"
 fastapi==0.75.2; python_full_version >= "3.6.1"
 filelock==3.9.0; python_version >= "3.7"
@@ -48,11 +49,13 @@ platformdirs==2.6.2; python_version >= "3.7"
 pluggy==1.0.0; python_version >= "3.7"
 pptree==3.1; python_version >= "3.7" and python_version < "4.0"
 pre-commit==2.21.0; python_version >= "3.7"
+py-cpuinfo==9.0.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pycodestyle==2.8.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pydantic==1.10.4; python_version >= "3.7" and python_full_version >= "3.6.1" and python_version < "4.0"
 pyflakes==2.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 pytest-asyncio==0.18.3; python_version >= "3.7"
+pytest-benchmark==4.0.0; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.10.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
