--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.0.1; python_version >= "3.7" and python_version < "4"
 click==8.1.3; python_version >= "3.7" and python_version < "4.0"
 colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.7.0" and platform_system == "Windows" and python_version < "4.0"
 coverage==7.0.5; python_version >= "3.7"
+fastapi-cprofile==0.0.2
 fastapi-utils==0.2.1; python_version >= "3.6" and python_version < "4.0"
 fastapi==0.75.2; python_full_version >= "3.6.1"
 greenlet==2.0.1; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
@@ -26,9 +27,11 @@ newrelic==8.5.0; (python_version >= "2.7" and python_full_version < "3.0.0") or 
 packaging==23.0; python_version >= "3.7"
 pluggy==1.0.0; python_version >= "3.7"
 pptree==3.1; python_version >= "3.7" and python_version < "4.0"
+py-cpuinfo==9.0.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pydantic==1.10.4; python_version >= "3.7" and python_full_version >= "3.6.1" and python_version < "4.0"
 pytest-asyncio==0.18.3; python_version >= "3.7"
+pytest-benchmark==4.0.0; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.10.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
