change BYPASS value to 1 instead of true

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         - name: EVENT_SINK_TYPE
           value: NONE
         - name: BYPASS
-          value: "false"
+          value: "0"
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
             secretKeyRef:
