--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,23 +3,43 @@ asgiref==3.5.0; python_version >= "3.7"
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 backoff==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+black==22.1.0; python_full_version >= "3.6.2"
+boto3-stubs==1.21.22; python_version >= "3.6"
 boto3==1.21.22; python_version >= "3.6"
+botocore-stubs==1.24.22; python_version >= "3.6"
 botocore==1.24.22; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+cfgv==3.3.1; python_full_version >= "3.6.1"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
-click==8.0.4; python_version >= "3.7"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0" and platform_system == "Windows"
+click==8.0.4; python_version >= "3.7" and python_full_version >= "3.6.2"
+colorama==0.4.4; sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.6.2" and platform_system == "Windows"
 coverage==6.3.2; python_version >= "3.7"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+distlib==0.3.4; python_full_version >= "3.6.1"
 fastapi-utils==0.2.1; python_version >= "3.6" and python_version < "4.0"
 fastapi==0.75.0; python_full_version >= "3.6.1"
+filelock==3.6.0; python_version >= "3.7" and python_full_version >= "3.6.1"
+flake8-black==0.2.5
+flake8-builtins==1.5.3
+flake8-comprehensions==3.8.0; python_version >= "3.7"
+flake8-debugger==4.0.0; python_version >= "3.6"
+flake8-fixme==1.1.1
+flake8-isort==4.1.1
+flake8-variables-names==0.0.4
+flake8==4.0.1; python_version >= "3.6"
 googleapis-common-protos==1.56.0; python_version >= "3.6"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
 grpcio==1.45.0; python_version >= "3.6"
 h11==0.13.0; python_version >= "3.7"
+identify==2.4.12; python_version >= "3.7" and python_full_version >= "3.6.1"
 idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 iniconfig==1.1.1; python_version >= "3.7"
+isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
 jmespath==1.0.0; python_version >= "3.7"
+mccabe==0.6.1; python_version >= "3.7"
+mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.6"
+mypy==0.931; python_version >= "3.6"
+nodeenv==1.6.0; python_full_version >= "3.6.1"
 opentelemetry-api==1.10.0; python_version >= "3.6"
 opentelemetry-exporter-otlp-proto-grpc==1.10.0; python_version >= "3.6"
 opentelemetry-exporter-otlp-proto-http==1.10.0; python_version >= "3.6"
@@ -33,26 +53,36 @@ opentelemetry-sdk==1.10.0; python_version >= "3.6"
 opentelemetry-semantic-conventions==0.29b0; python_version >= "3.6"
 opentelemetry-util-http==0.29b0; python_version >= "3.6"
 packaging==21.3; python_version >= "3.7"
+pathspec==0.9.0; python_full_version >= "3.6.2"
+platformdirs==2.5.1; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==1.0.0; python_version >= "3.7"
+pre-commit==2.17.0; python_full_version >= "3.6.1"
 protobuf==3.20.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+pycodestyle==2.8.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pydantic==1.9.0; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.1"
+pyflakes==2.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 pyparsing==3.0.7; python_version >= "3.6"
 pytest-asyncio==0.18.2; python_version >= "3.7"
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-mock==3.7.0; python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+pyyaml==6.0; python_version >= "3.6" and python_full_version >= "3.6.1"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 s3transfer==0.5.2; python_version >= "3.6"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+six==1.16.0; python_full_version >= "3.6.1" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
 sniffio==1.2.0; python_version >= "3.6" and python_full_version >= "3.6.2"
 sqlalchemy==1.4.32; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 starlette==0.17.1; python_version >= "3.6" and python_full_version >= "3.6.1" and python_version < "4.0"
-toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-tomli==2.0.1; python_version >= "3.7"
-typing-extensions==4.1.1; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.1"
+testfixtures==6.18.5
+toml==0.10.2; python_full_version >= "3.6.1" and python_version >= "3.6" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7")
+tomli==2.0.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+types-setuptools==57.4.11
+types-toml==0.10.4
+typing-extensions==4.1.1; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.6"
 ulid-py==1.1.0
 urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 uvicorn==0.17.6; python_version >= "3.7"
+virtualenv==20.13.4; python_full_version >= "3.6.1"
 wrapt==1.14.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
