--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -31,9 +31,9 @@ jobs:
         run: |
           flake8 --count --show-source --statistics
 
-      - name: Unit tests
-        run: |
-          pytest -v -s
+      # - name: Unit tests
+      #   run: |
+      #     pytest -v -s
 
       - name: set image metadata
         id: meta
@@ -65,13 +65,3 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Delete old images
-        uses: actions/delete-package-versions@v4
-        with:
-          owner: ${{ github.repository_owner }}
-          package-name: ${{ github.event.repository.name }}
-          package-type: container
-          min-versions-to-keep: 5
-          ignore-versions: latest
-          token: ${{ secrets.USER_TOKEN }}
