--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -43,6 +43,8 @@ jobs:
             tags: |
               type=ref,event=tag
               type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'develop') }}
+            flavor: |
+              latest=false
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
