--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ types-redis = "^4.4.0"
 types-requests = "^2.28.11"
 fakeredis = "^2.4.0"
 types-boto3 = "^1.0.2"
+gprof2dot = "^2022.7.29"
 
 [tool.isort]
 profile = "black"
