--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,6 +28,7 @@ flake8-fixme==1.1.1
 flake8-isort==4.2.0
 flake8-variables-names==0.0.4
 flake8==4.0.1; python_version >= "3.6"
+gprof2dot==2022.7.29; python_version >= "2.7"
 greenlet==2.0.1; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
 h11==0.14.0; python_version >= "3.7"
 hiredis==2.1.1; python_version >= "3.7" and python_version < "4.0"
