--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
             "source.organizeImports": true
         }
     },
-    "python.linting.mypyEnabled": true
+    "python.linting.mypyEnabled": true,
+    "jupyter.debugJustMyCode": false
 }
