--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         ports:
         - containerPort: 8000
         env:
-        - name: REDIS_OM_URL
+        - name: REDIS_URL
           value: redis://:pass147@redis:6379/0
         - name: EVENT_SINK_TYPE
           value: NONE
