--- a/mypy.ini
+++ b/mypy.ini
@@ -25,7 +25,13 @@ warn_untyped_fields = True
 [mypy-uvicorn]
 ignore_missing_imports = True
 
+[mypy-aredis_om]
+ignore_missing_imports = True
+
 [mypy-redis_om]
+ignore_missing_imports = True
+
+[mypy-aredis_om.model.*]
 ignore_missing_imports = True
 
 [mypy-redis_om.model.*]
