--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,17 @@ pytest-mock = "^3.10"
 pytest-cov = "^4.0"
 pytest-dotenv = "^0.5.2"
 pytest-asyncio = "^0.20"
+types-setuptools = "^57.4.8"
+types-toml = "^0.10.3"
+types-redis = "^4.4.0"
+types-boto3 = "^1.0.2"
+gprof2dot = "^2022.7.29"
+scalene = "^1.5.31.1"
+
+[tool.poetry.group.linting]
+optional = true
+
+[tool.poetry.group.linting.dependencies]
 black = "^22.1.0"
 flake8 = "^4.0.1"
 flake8-black = "^0.3.3"
@@ -40,12 +51,6 @@ flake8-variables-names = "^0.0.5"
 isort = "^5.12.0"
 pre-commit = "^3.3.3"
 mypy = "1.4.1"
-types-setuptools = "^57.4.8"
-types-toml = "^0.10.3"
-types-redis = "^4.4.0"
-types-boto3 = "^1.0.2"
-gprof2dot = "^2022.7.29"
-scalene = "^1.5.31.1"
 
 [tool.isort]
 profile = "black"
